--- a/templates/base1.html
+++ b/templates/base1.html
@@ -1,51 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CS421 Project</title>
-
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    
-    <!-- Bootstrap JS -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-    
-    <!-- Google Maps and Places API -->
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBJmoy_vPg8vKjB-cj1Oy8ix2HfOgLWeTQ&libraries=places" async defer></script>
-    
-    <!-- Axios -->
-     <!-- Axios -->
-  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-
-    <!-- Custom JS -->
-    <script src="{{ url_for('static', filename='js/map.js') }}" defer></script>
-
-    <!-- Internal CSS -->
-    <style>     
-        #map {
-            height: 500px;
-            width: 100%;
-        }
-        #search-box {
-            width: 100%;
-            padding: 10px;
-            margin-bottom: 10px;
-        }
-    </style>
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <!-- CSS only -->
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+        <!-- JS, Popper.js, and jQuery -->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+        <!-- Google Maps JavaScript API -->
+        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBJmoy_vPg8vKjB-cj1Oy8ix2HfOgLWeTQ&libraries=places"></script>
+        <!-- Axios -->
+<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+        <title>CS421 Project</title>
+        <!-- Internal CSS -->
+        <style>     
+        </style>
+    </head>
 <body>
     <!-- Navigation Bar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <ul class="navbar-nav">
+          <ul class="navbar-nav">
             <nav class="navbar navbar-light bg-light">
-                <form class="form-inline" onsubmit="return false;">
-                    <input id="search-box" class="form-control mr-sm-2" type="search" placeholder="Enter a city..." aria-label="Search">
-                    <button class="btn btn-outline-success my-2 my-sm-0" id="search-button" type="button">Search</button>
+                <form class="form-inline">
+                  <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                  <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
                 </form>
-            </nav>
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="{{ url_for('trip') }}" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              </nav>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="{{url_for('trip')}}" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                   Groups
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -53,13 +36,10 @@
                   <a class="dropdown-item" href="#">Venice Trip</a>
                   <a class="dropdown-item" href="#">Paris Trip</a>
                 </div>
-            </li>
-            <li><button type="button" class="btn btn-link"><a href="{{ url_for('welcome') }}">Log Out</a></button></li>
-        </ul>
-    </nav>
-
-    <div id="map"></div>
-
+              </li>
+              <li><button type="button" class="btn btn-link"><a href="{{url_for('welcome')}}">Log Out</a></button></li>
+          </ul>
+      </nav>
     {% block content %}
     {% endblock %}
 </body>
