--- a/templates/trip.html
+++ b/templates/trip.html
@@ -2,21 +2,45 @@
 
 {% block content %}
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <ul class="navbar-nav">
-        <li class="nav-item"><a class="nav-link" href="{{ url_for('chat') }}">Chat</a></li>
-        <li class="nav-item"><a class="nav-link" href="{{ url_for('budget') }}">Budget</a></li>
-    </ul>
+  <ul class="navbar-nav">
+    <li class="nav-item">
+      <a class="nav-link" href="{{url_for('chat')}}">Chat</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="{{url_for('budget')}}">Budget</a>
+    </li>
+  </ul>
+  <div class="form-check form-switch">
+    <input class="form-check-input" type="checkbox" id="toggleAttractions">
+    <label class="form-check-label" for="toggleAttractions">Show Attractions</label>
+  </div>
 </nav>
-<h1>Info About Trip</h1>
-<ul>
-    <li>Members of group</li>
-    <li>Saved info</li>
-    <li>Hotels</li>
-</ul>
 
-<div id="map-container" style="position: relative;">
-    <input id="search-box" class="form-control" type="text" placeholder="Enter a city..." aria-label="Search">
-    <div id="autocomplete-results" class="autocomplete-dropdown"></div>
-    <div id="map"></div>
+<h1>Info About Trip</h1>
+<!-- Other trip information -->
+<input id="autocomplete" class="form-control" type="text" placeholder="Enter a city">
+
+<!-- Container for the map -->
+<div id="map" style="height: 500px; width: 100%;"></div>
+
+<!-- Container for the restaurants or attractions list -->
+<div id="restaurants-list" style="height: 500px; width: 100%; overflow-y: scroll; margin-top: 20px;">
+  <table class="table table-striped">
+    <thead>
+      <tr>
+        <th>Name</th>
+        <th>Website</th>
+        <th>Price Level</th>
+        <th>Rating</th>
+      </tr>
+    </thead>
+    <tbody id="restaurants-table-body">
+      <!-- Data will be dynamically inserted here -->
+    </tbody>
+  </table>
 </div>
+
+<!-- Link to the map.js file -->
+<script src="{{ url_for('static', filename='js/map.js') }}"></script>
+
 {% endblock %}
