--- a/templates/mainpage.html
+++ b/templates/mainpage.html
@@ -2,5 +2,13 @@
 
 {% block content %}
       <h1>Main Page</h1>
+      <p>
+            Username:
+            {{user.username}}
+            <br>
+            Past Trips:
+            {{user.past_trips}}
+            
+      </p>
 
 {% endblock %}
