--- a/templates/base0.html
+++ b/templates/base0.html
@@ -27,7 +27,7 @@
               <a class="nav-link" href="#">Contact</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="{{url_for('admit')}}">Login/Sign up</a>
+                <a class="nav-link" href="{{url_for('auth.login')}}">Login/Sign up</a>
               </li>
           </ul>
       </nav>
