feat: add chat and trip features

--- a/templates/mainpage.html
+++ b/templates/mainpage.html
@@ -9,7 +9,9 @@
 <ul>
   {% for trip in user.profile.past_trips %}
   <li>
-    <strong>Trip Name:</strong> {{ trip.trip_name }} <br />
+    <a href="{{ url_for('trip_detail', trip_id=trip._id) }}">
+      <strong>Trip Name:</strong> {{ trip.trip_name }}
+    </a>
     <strong>People Involved:</strong>
     <ul>
       {% for user_name in trip.user_names %}
