--- a/templates/trip.html
+++ b/templates/trip.html
@@ -1,9 +1,10 @@
-{% extends "base1.html" %}
-{% block content %}
+{% extends "base1.html" %} {% block content %}
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <ul class="navbar-nav">
     <li class="nav-item">
-      <a class="nav-link" href="{{ url_for('trip_chat', trip_id=trip._id) }}">Chat</a>
+      <a class="nav-link" href="{{ url_for('trip_chat', trip_id=trip._id) }}"
+        >Chat</a
+      >
     </li>
     <li class="nav-item">
       <a class="nav-link" href="{{ url_for('budget') }}">Budget</a>
@@ -11,7 +12,9 @@
   </ul>
   <div class="form-check form-switch">
     <input class="form-check-input" type="checkbox" id="toggleAttractions" />
-    <label class="form-check-label" for="toggleAttractions">Show Attractions</label>
+    <label class="form-check-label" for="toggleAttractions"
+      >Show Attractions</label
+    >
   </div>
 </nav>
 
@@ -23,7 +26,10 @@
   {% endfor %}
 </ul>
 
-<form action="{{ url_for('itinerary.add_itinerary_item', trip_id=trip._id) }}" method="POST">
+<form
+  action="{{ url_for('itinerary.add_itinerary_item', trip_id=trip._id) }}"
+  method="POST"
+>
   <input type="text" name="activity" placeholder="Activity" required />
   <input type="text" name="location" placeholder="Location" required />
   <input type="datetime-local" name="time" placeholder="Time" required />
@@ -32,7 +38,13 @@
 </form>
 
 <!-- Input field for location autocomplete -->
-<input id="autocomplete" placeholder="Enter a location" type="text" class="form-control" style="width: 300px; margin-bottom: 10px;" />
+<input
+  id="autocomplete"
+  placeholder="Enter a location"
+  type="text"
+  class="form-control"
+  style="width: 300px; margin-bottom: 10px"
+/>
 
 <!-- Container for the map -->
 <div id="map" style="height: 500px; width: 100%"></div>
