--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -1,8 +1,6 @@
-{% extends "base0.html"%}
-
-{% block content %}
-      <h1>Welcome page</h1>
-      <li>About the website</li>
-      <li>Pictures</li>
-      <li>etc</li>
+{% extends "base0.html"%} {% block content %}
+<h1>Welcome page</h1>
+<li>About the website</li>
+<li>Pictures</li>
+<li>etc</li>
 {% endblock %}
