--- a/templates/base1.html
+++ b/templates/base1.html
@@ -1,3 +1,4 @@
+<!-- base1.html -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -18,34 +19,28 @@
     ></script>
     <!-- Axios -->
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <!-- Link to your custom CSS file -->
+    <link
+      rel="stylesheet"
+      href="{{ url_for('static', filename='styles.css') }}"
+    />
     <title>CS421 Project</title>
   </head>
   <body>
     <!-- Navigation Bar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <ul class="navbar-nav">
-        <li class="nav-item dropdown">
-          <a
-            class="nav-link dropdown-toggle"
-            href="{{ url_for('trip') }}"
-            id="navbarDropdown"
-            role="button"
-            data-toggle="dropdown"
-            aria-haspopup="true"
-            aria-expanded="false"
-          >
-            Groups
-          </a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="#">Trip specific to user</a>
-            <a class="dropdown-item" href="#">Venice Trip</a>
-            <a class="dropdown-item" href="#">Paris Trip</a>
-          </div>
+        <li class="nav-item">
+          <a class="nav-link" href="{{ url_for('welcome') }}">Home</a>
         </li>
-        <li>
-          <button type="button" class="btn btn-link">
-            <a href="{{ url_for('welcome') }}">Log Out</a>
-          </button>
+        <li class="nav-item">
+          <a class="nav-link" href="{{ url_for('trip') }}">Groups</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{{ url_for('budget') }}">Budget</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{{ url_for('auth.logout') }}">Log Out</a>
         </li>
       </ul>
     </nav>
