added logic for invite link. running into token, missing when hitting the endpoint. Might consider navigating to login page if this is the case? ideas?

--- a/templates/base1.html
+++ b/templates/base1.html
@@ -34,7 +34,9 @@
           <a class="nav-link" href="{{ url_for('welcome') }}">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{{ url_for('trip') }}">Groups</a>
+          <a class="nav-link" href="{{ url_for('trip', trip_id=trip_id) }}"
+            >Groups</a
+          >
         </li>
         <li class="nav-item">
           <a class="nav-link" href="{{ url_for('budget') }}">Budget</a>
