--- a/templates/chat.html
+++ b/templates/chat.html
@@ -12,6 +12,9 @@
     <li class="nav-item">
       <a class="nav-link" href="{{ url_for('budget') }}">Budget</a>
     </li>
+    <li class="nav-item">
+      <a class="nav-link" href="{{url_for('itinerary')}}">Itinerary</a>
+    </li>
   </ul>
 </nav>
 
