--- a/templates/trip.html
+++ b/templates/trip.html
@@ -7,7 +7,10 @@
       >
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="{{ url_for('budget') }}">Budget</a>
+      <a class="nav-link" href="{{ url_for('budget', trip_id=trip._id) }}">Budget</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="{{url_for('itinerary', trip_id=trip._id)}}">Itinerary</a>
     </li>
   </ul>
   <div class="form-check form-switch">
@@ -17,6 +20,18 @@
     >
   </div>
 </nav>
+
+{% with messages = get_flashed_messages(with_categories=True) %}
+{% if messages %}
+    <div class="flash-messages">
+        {% for category, message in messages %}
+            <div class="alert alert-{{ category }}">
+                {{ message }}
+            </div>
+        {% endfor %}
+    </div>
+{% endif %}
+{% endwith %}
 
 <h1>{{ trip.trip_name }}</h1>
 <h2>Itinerary</h2>
