--- a/templates/base1.html
+++ b/templates/base1.html
@@ -11,11 +11,26 @@
       integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
       crossorigin="anonymous"
     />
-    
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+
+    <script
+      src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+      integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
+      integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
+      integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+      crossorigin="anonymous"
+    ></script>
+    <link
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
     <!-- JS, Popper.js, and jQuery -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
@@ -33,57 +48,121 @@
   </head>
   <body>
     <!-- Navigation Bar -->
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-          <ul class="navbar-nav">
-            <nav class="navbar navbar-light bg-light">
-              </nav>
-              <a class="nav-link" href="{{ url_for('welcome') }}">Home <span class="sr-only"></span></a>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  Trips
-                </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  {% if user.profile.past_trips %}
-                    {% for trip in user.profile.past_trips %}
-                      <a class="dropdown-item" href="{{ url_for('trip_detail', trip_id=trip._id) }}">
-                        {{ trip.trip_name }}
-                      </a>
-                    {% endfor %}
-                  {% else %}
-                  <p>No past trips found.</p>
-                  {% endif %}
-                  <!-- Button trigger modal -->
-                  <button type="button" class="dropdown-item" data-toggle="modal" data-target="#addTripModal"> + Add Trip</button>
-                  <!-- <a class="dropdown-item" href="{{url_for('trip', username=username, trip_name=trip.trip_name)}}">Add new trip</a> -->
-                </div>
-              </li>
-              <li><button type="button" class="btn btn-link"><a href="{{ url_for('auth.logout') }}">Log Out</a></button></li>
-          </ul>
-        </nav>
-  <!-- Modal -->
-  <div class="modal fade" id="addTripModal" tabindex="-1" role="dialog" aria-labelledby="addTripModal" aria-hidden="true">
-    <div class="modal-dialog" role="document">
-    <div class="modal-content">
-    <div class="modal-header">
-    <h5 class="modal-title" id="addTripModalLabel">Create a New Trip</h5>
-    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-      <span aria-hidden="true">&times;</span>
-    </button>
-    </div>
-
-    <div class="modal-body">
-    <form action="{{ url_for('itinerary.create_itinerary', username=username)}}" method="POST">
-      <label for="trip_name">Trip Name</label>
-      <input type="text" name="trip_name" required>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        <button type="submit" class="btn btn-primary">Add trip!</button>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <ul class="navbar-nav">
+        <nav class="navbar navbar-light bg-light"></nav>
+        <a class="nav-link" href="{{ url_for('welcome') }}"
+          >Home <span class="sr-only"></span
+        ></a>
+        <li class="nav-item dropdown">
+          <a
+            class="nav-link dropdown-toggle"
+            id="navbarDropdown"
+            role="button"
+            data-toggle="dropdown"
+            aria-haspopup="true"
+            aria-expanded="false"
+          >
+            Trips
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            {% if user.profile.past_trips %} {% for trip in
+            user.profile.past_trips %}
+            <a
+              class="dropdown-item"
+              href="{{ url_for('trip_detail', trip_id=trip._id) }}"
+            >
+              {{ trip.trip_name }}
+            </a>
+            {% endfor %} {% else %}
+            <p>No past trips found.</p>
+            {% endif %}
+            <!-- Button trigger modal -->
+            <button
+              type="button"
+              class="dropdown-item"
+              data-toggle="modal"
+              data-target="#addTripModal"
+            >
+              + Add Trip
+            </button>
+            <!-- <a class="dropdown-item" href="{{url_for('trip', username=username, trip_name=trip.trip_name)}}">Add new trip</a> -->
+          </div>
+        </li>
+        <li>
+          <button type="button" class="btn btn-link">
+            <a href="{{ url_for('auth.logout') }}">Log Out</a>
+          </button>
+        </li>
+      </ul>
+    </nav>
+    <!-- Modal -->
+    <div
+      class="modal fade"
+      id="addTripModal"
+      tabindex="-1"
+      role="dialog"
+      aria-labelledby="addTripModal"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="addTripModalLabel">
+              Create or Join a Trip
+            </h5>
+            <button
+              type="button"
+              class="close"
+              data-dismiss="modal"
+              aria-label="Close"
+            >
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <form
+              id="tripForm"
+              action="{{ url_for('itinerary.create_itinerary', username=username)}}"
+              method="POST"
+            >
+              <label for="trip_name">Trip Name</label>
+              <input type="text" name="trip_name" required />
+              <div class="modal-footer">
+                <button
+                  type="button"
+                  class="btn btn-secondary"
+                  data-dismiss="modal"
+                >
+                  Close
+                </button>
+                <button type="submit" class="btn btn-primary">Add trip!</button>
+              </div>
+            </form>
+            <form
+              id="joinTripForm"
+              action="{{ url_for('itinerary.join_itinerary_by_invite')}}"
+              method="POST"
+            >
+              <label for="invite_code">Invite Code</label>
+              <input type="text" name="invite_code" required />
+              <div class="modal-footer">
+                <button
+                  type="button"
+                  class="btn btn-secondary"
+                  data-dismiss="modal"
+                >
+                  Close
+                </button>
+                <button type="submit" class="btn btn-primary">
+                  Join trip!
+                </button>
+              </div>
+            </form>
+          </div>
+        </div>
       </div>
-    </form>
-  </div>
-</div>
-</div>
-</div>
+    </div>
 
     {% block content %} {% endblock %}
     <!-- Google Maps JavaScript API (deferred loading) -->
