--- a/templates/trip.html
+++ b/templates/trip.html
@@ -7,10 +7,14 @@
       >
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="{{ url_for('budget', trip_id=trip._id) }}">Budget</a>
+      <a class="nav-link" href="{{ url_for('budget', trip_id=trip._id) }}"
+        >Budget</a
+      >
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="{{url_for('itinerary', trip_id=trip._id)}}">Itinerary</a>
+      <a class="nav-link" href="{{url_for('itinerary', trip_id=trip._id)}}"
+        >Itinerary</a
+      >
     </li>
   </ul>
   <div class="form-check form-switch">
@@ -21,17 +25,14 @@
   </div>
 </nav>
 
-{% with messages = get_flashed_messages(with_categories=True) %}
-{% if messages %}
-    <div class="flash-messages">
-        {% for category, message in messages %}
-            <div class="alert alert-{{ category }}">
-                {{ message }}
-            </div>
-        {% endfor %}
-    </div>
-{% endif %}
-{% endwith %}
+{% with messages = get_flashed_messages(with_categories=True) %} {% if messages
+%}
+<div class="flash-messages">
+  {% for category, message in messages %}
+  <div class="alert alert-{{ category }}">{{ message }}</div>
+  {% endfor %}
+</div>
+{% endif %} {% endwith %}
 
 <h1>{{ trip.trip_name }}</h1>
 <h2>Itinerary</h2>
@@ -41,22 +42,17 @@
   {% endfor %}
 </ul>
 
-<!-- Invite Link Section -->
+<!-- Invite Code Section -->
 <div>
-  <input type="text" value="{{ invite_link }}" id="inviteLink" readonly style="margin-bottom: 10px;">
-  <button onclick="copyInviteLink()">Invite Someone To This Itinerary</button>
+  <input
+    type="text"
+    value="{{ trip.invite_code }}"
+    id="inviteCode"
+    readonly
+    style="margin-bottom: 10px"
+  />
+  <button onclick="copyInviteCode()">Invite Someone To This Itinerary</button>
 </div>
-
-<form
-  action="{{ url_for('itinerary.add_itinerary_item', trip_id=trip._id) }}"
-  method="POST"
->
-  <input type="text" name="activity" placeholder="Activity" required />
-  <input type="text" name="location" placeholder="Location" required />
-  <input type="datetime-local" name="time" placeholder="Time" required />
-  <textarea name="notes" placeholder="Notes"></textarea>
-  <button type="submit">Add Item</button>
-</form>
 
 <!-- Input field for location autocomplete -->
 <input
@@ -90,12 +86,12 @@
 <script src="{{ url_for('static', filename='js/map.js') }}"></script>
 <script src="{{ url_for('static', filename='js/map.js') }}"></script>
 <script>
-function copyInviteLink() {
+  function copyInviteLink() {
     var copyText = document.getElementById("inviteLink");
     copyText.select();
     copyText.setSelectionRange(0, 99999); // For mobile devices
     navigator.clipboard.writeText(copyText.value);
     alert("Copied the link: " + copyText.value);
-}
+  }
 </script>
 {% endblock %}
