--- a/templates/base0.html
+++ b/templates/base0.html
@@ -21,9 +21,14 @@
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
       crossorigin="anonymous"
     ></script>
+    <!-- Link to your custom CSS file -->
+    <link
+      rel="stylesheet"
+      href="{{ url_for('static', filename='styles.css') }}"
+    />
     <title>CS421 Project</title>
-    <!--Internal CSS-->
-    <style></style>
+
+    
   </head>
   <body>
     <!--Navigation Bar-->
