--- a/templates/base1.html
+++ b/templates/base1.html
@@ -39,11 +39,17 @@
     ></script>
     <!-- Axios -->
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+
     <!-- Link to your custom CSS file -->
     <link
       rel="stylesheet"
       href="{{ url_for('static', filename='styles.css') }}"
     />
+    <style>
+      body{
+        background-color: azure;
+      }
+    </style>
     <title>CS421 Project</title>
   </head>
   <body>
