--- a/templates/budget.html
+++ b/templates/budget.html
@@ -8,7 +8,7 @@
     </li>
   </ul>
 </nav>
-<h1>Budget for {{ trip.trip_name }}</h1>
+<h1 class="display-5">{{ trip.trip_name }} - Budget</h1>
 <table class="table" id="budget">
   <thead>
     <tr>
