--- a/templates/trip_chat.html
+++ b/templates/trip_chat.html
@@ -9,7 +9,7 @@
   </ul>
 </nav>
 
-<h1>{{ trip.trip_name }} - Chat</h1>
+<h1 class="display-5">{{ trip.trip_name }} - Chat</h1>
 
 <div id="chat-container" style="height: 400px; overflow-y: scroll">
   <ul id="chat-logs">
