--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -1,6 +1,9 @@
 {% extends "base0.html"%} {% block content %}
-<h1>Welcome page</h1>
-<li>About the website</li>
-<li>Pictures</li>
-<li>etc</li>
+<div class="container">
+    <h1 class="display-3">Welcome page</h1>
+    <li>About the website</li>
+    <li>Pictures</li>
+    <li>etc</li>
+</div>
+
 {% endblock %}
