--- a/templates/admit.html
+++ b/templates/admit.html
@@ -7,13 +7,34 @@ get_flashed_messages(with_categories=True) %} {% if messages %}
 </div>
 {% endif %} {% endwith %}
 
-<h2>User name and password authentication</h2>
+<h2 class="display-5 text-center">Sign In</h2>
 <form action="{{ url_for('auth.login') }}" method="POST">
-  <label for="username">Username</label>
-  <input type="text" name="username" required />
-  <label for="password">Password</label>
-  <input type="password" name="password" required />
-  <button type="submit" class="btn btn-info">Log In</button>
+
+
+
+  <div class="row mb-4">
+    <div class="col d-flex justify-content-center">
+      <div data-mdb-input-init class="form-outline mb-4">
+        <label class="form-label" for="username">Username</label>
+        <input type="text" name="username" class="form-control" required />
+      </div>
+    </div> 
+  </div>
+  <div class="row mb-5">
+    <div class="col d-flex justify-content-center">
+      <div data-mdb-input-init class="form-outline mb-4">
+        <label class="form-label" for="password">Password</label>
+        <input type="password" name="password" class="form-control" required />
+      </div>   
+    </div>
+  </div>
+
+  <div class="text-center">
+    <button  type="submit" class="btn btn-primary btn-block mb-4">Sign in</button>
+    <p class="lead">Not signed up? <a href="{{url_for('auth.register')}}">Sign up</a> here</p>
+  </div>
 </form>
-<h3>Not signed up? <a href="{{url_for('auth.register')}}">Sign up</a> here</h3>
 {% endblock %}
+
+
+<!--Source: https://mdbootstrap.com/docs/standard/extended/login/ -->
