--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -1,9 +1,27 @@
 {% extends "base0.html"%} {% block content %}
-<div class="container">
-    <h1 class="display-3">Welcome page</h1>
-    <li>About the website</li>
-    <li>Pictures</li>
-    <li>etc</li>
+
+<div class="container my-5">
+    <div class="text-center mb-4">
+        <h1 class="display-3">Welcome to Trip Planner</h1>
+        <p class="lead">The ultimate tool for planning fun, unforgettable journeys with your friends.</p>
+    </div>
+    <div class="row justify-content-center">
+        <div class="col-lg-8">
+          <ul style="padding: 20px">
+            <li style="padding: 10px">Create a profile to track and manage past, present and future trips</li>
+            <li style="padding: 10px">Discover and add attractions and hotels to create a comprehensive, personalized itinerary</li>
+            <li style="padding: 10px">Invite your friends to join your trip and share the adventure</li>
+            <li style="padding: 10px">Chat with your travel companions to ensure efficient communiation in all details</li>
+            <li style="padding: 10px">View and update your itinerary with ease</li>
+            <li style="padding: 10px">Adjust your budget to keep finances on track and to avoid any surprises</li>   
+        </ul>
+        </div>
+    </div>
+    <div class="text-center mb-4" style="padding: 20px">
+        <p class="lead">Trip Planner helps you make the most of your trip, wherever your travels take you.</p>
+    </div>
 </div>
+
+
 
 {% endblock %}
