--- a/templates/base0.html
+++ b/templates/base0.html
@@ -26,24 +26,30 @@
       rel="stylesheet"
       href="{{ url_for('static', filename='styles.css') }}"
     />
+    <style>
+    body{
+      background-image: url("{{ url_for('static', filename='plane.jpg') }}");
+      background-size: cover;
+      background-repeat: no-repeat;
+      background-attachment: fixed;
+      min-height: 100vh;
+      font-weight: 400;
+      font-size: large;
+    }
+    </style>
+
     <title>CS421 Project</title>
 
     
   </head>
   <body>
     <!--Navigation Bar-->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light" style="padding: 10px; background-color: #e0f7fa; opacity: 0.5; z-index:1050">
       <ul class="navbar-nav">
         <li class="nav-item active">
           <a class="nav-link" href="{{url_for('welcome')}}"
             >Home <span class="sr-only"></span
           ></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">FAQ</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Contact</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="{{url_for('auth.login')}}">Login/Sign up</a>
@@ -53,3 +59,6 @@
     {% block content %} {% endblock %}
   </body>
 </html>
+
+<!--Source:
+https://www.w3schools.com/css/css_image_transparency.asp-->
