--- a/templates/trip.html
+++ b/templates/trip.html
@@ -1,6 +1,6 @@
 {% extends "base1.html" %} {% block content %}
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <ul class="navbar-nav">
+<nav class="navbar navbar-expand-lg navbar-light">
+  <ul class="navbar-nav" style="padding: 10px 30px">
     <li class="nav-item">
       <a class="nav-link" href="{{ url_for('trip_chat', trip_id=trip._id) }}"
         >Chat</a
